fix(modal): left aligned footer actions, removed pf-m-align-left

--- a/src/patternfly/components/ModalBox/modal-box.scss
+++ b/src/patternfly/components/ModalBox/modal-box.scss
@@ -113,12 +113,6 @@
   align-items: center;
   margin-top: var(--pf-c-modal-box__footer--MarginTop);
 
-  // Using margin-left instead of justify: flex-end; as there may be other elements in the footer that align left
-  // Limit scope to direct child buttons, allows use of layouts if needed
-  > .pf-c-button:first-of-type {
-    margin-left: var(--pf-c-modal-box__footer__c-button--first-of-type--MarginLeft);
-  }
-
   // Base margin left and right equal for buttons when wrapped
   > .pf-c-button:not(:last-child) {
     margin-right: var(--pf-c-modal-box__footer--c-button--MarginRight);
@@ -126,10 +120,6 @@
     @media screen and (min-width: $pf-global--breakpoint--sm) {
       --pf-c-modal-box__footer--c-button--MarginRight: var(--pf-c-modal-box__footer--c-button--sm--MarginRight);
     }
-  }
-
-  &.pf-m-align-left {
-    --pf-c-modal-box__footer__c-button--first-of-type--MarginLeft: 0;
   }
 }
 
